--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "@prisma/client": "5.2.0",
     "@supabase/supabase-js": "^2.34.0",
+    "bullmq": "^5.21.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "ioredis": "^5.4.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -26,6 +28,7 @@
     "test": "vitest",
     "dev": "nodemon src/app.ts",
     "start": "yarn build && node dist/src/app.js",
+    "start:worker": "ts-node src/utils/worker.ts",
     "build": "prisma generate && tsc -p .",
     "vercel-build": "prisma generate",
     "lint": "eslint . --ext .ts",
