--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -13,14 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          echo "${{ secrets.EC2_SSH_KEY }}" > private_key && chmod 600 private_key
+
+          ssh -o StrictHostKeyChecking=no -i  ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             # Update package manager and install Node.js if needed
             sudo apt-get update
             if ! command -v node &> /dev/null; then
