--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > private_key && chmod 600 private_key
 
-          ssh -o StrictHostKeyChecking=no -i  ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             # Update package manager and install Node.js if needed
             sudo apt-get update
             if ! command -v node &> /dev/null; then
