--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -20,10 +20,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Navigate to the application directory
-            cd /code/medipro
+            cd code/medipro
 
-            # Pull the latest code from the main branch
             git pull origin main
 
             yarn
