--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "@prisma/client": "5.2.0",
     "@supabase/supabase-js": "^2.34.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -25,8 +27,8 @@
   "main": "dist/src/app.js",
   "scripts": {
     "test": "vitest",
-    "dev": "nodemon src/app.ts",
-    "start": "yarn build && node dist/src/app.js",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "start": "node dist/src/app.js",
     "build": "prisma generate && tsc -p .",
     "vercel-build": "prisma generate",
     "lint": "eslint . --ext .ts",
@@ -51,13 +53,11 @@
     "@types/node": "^20.6.2",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "bcryptjs": "^2.4.3",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
-    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.3.3",
     "prisma": "^5.3.1",
     "ts-node": "^10.9.1",
