--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@prisma/client": "5.2.0",
     "@supabase/supabase-js": "^2.34.0",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.22.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
