--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,16 @@ services:
     image: voldemort69/medipro
     container_name: medipro_server
     restart: always
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app
+    working_dir: /app
     ports:
       - "${PORT}:${PORT}"
     depends_on:
       - db
       - migrate
+      - redis
+
     env_file:
       - .env
-
-    command: yarn start
 
   db:
     image: postgres
@@ -30,14 +28,25 @@ services:
   migrate:
     image: voldemort69/medipro
     container_name: medipro_migrate
-    working_dir: /usr/src/app
+    working_dir: /app
     depends_on:
       - db
     env_file:
       - .env
     volumes:
-      - .:/usr/src/app
+      - .:/app
     command: npx prisma migrate deploy
+
+  redis:
+    image: redis:alpine
+    container_name: redis
+    env_file:
+      - .env
+    volumes:
+      - redis:/var/lib/redis/data
+    ports:
+      - 6379:6379
 
 volumes:
   postgres:
+  redis:
