--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
+    "mongodb": "^6.16.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
