--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.937.0",
     "@prisma/client": "5.2.0",
     "@supabase/supabase-js": "^2.34.0",
     "bcryptjs": "^2.4.3",
